# Sentinel

./: .cursorindexingignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEBASE_CLEANUP_PLAN.md  GEMINI.md  NEW_README_DRAFT.md  PR_DESCRIPTION.md  README.md  TRADE_BUBBLES_STATUS.md  WINDOWS_BRANCH_PR.md  WINDOWS_READY_COMMIT.txt  WINDOWS_SETUP_CONTINUATION.md  claude.bat  codex_tpo_plan.md  commit_message.txt  config.h.in  cvdthresholdrule.cpp  dockable-widgets-code-review.txt  liquidity_timeseries_log.txt  liquidity_timeseries_log_1.txt  liquidity_timeseries_log_2.txt  mainwindow.h  output.txt  performance_baseline_report.txt  proj.txt  ruleengine.h  sLog_grep_results.txt  statisticscontroller.cpp  test_fractal_zoom.sh  tradedata.h  vcpkg.json  websocketclient.cpp
apps/sentinel_gui/: CMakeLists.txt  main.cpp
backups/: backup-20251001-2023.patch
docs/: 01_PROJECT_PLAN.md  02_ARCHITECTURE.md  ARCHITECTURE.md  CODE_REVIEW_REPORT.md  CROSS_PLATFORM_BUILD.md  CROSS_PLATFORM_MIGRATION.md  DATA_FLOW.md  GRID_ARCHITECTURE.md  LIVE_ARCHITECTURE.md  LOGGING_GUIDE.md  MARKETDATA_ARCHITECTURE.md  PROJECT_PLAN.md  RENDERING_FEATURES_PLAN.md  REVOLUTIONARY_REFACTORING_WORKFLOW.md  SYSTEM_ARCHITECTURE.md  TODO.md  V2_RENDERING_ARCHITECTURE.md  cross_compatability.md  gemini_header_generation_prompt.md  logging_demo.cpp  logging_migration_plan.md  logging_usage_guide.md  (+2 more)
libs/core/: Authenticator.cpp  Authenticator.hpp  CMakeLists.txt  CoinbaseConnection.cpp  CoinbaseConnection.hpp  CoinbaseMessageParser.cpp  CoinbaseMessageParser.hpp  CoinbaseProtocolHandler.cpp  CoinbaseProtocolHandler.hpp  CoinbaseStreamClient.cpp  CoinbaseStreamClient.hpp  CoinbaseStreamClientFacade.cpp  Cpp20Utils.hpp  DataCache.cpp  DataCache.hpp  FastOrderBook.cpp  LiquidityTimeSeriesEngine.cpp  LiquidityTimeSeriesEngine.h  Log.hpp  MarketDataCore.cpp  MarketDataCore.hpp  MessageParser.hpp  Rule.h  RuleEngine.cpp  RuleEngine.h  SentinelLogging.cpp  SentinelLogging.hpp  SentinelMonitor.cpp  SentinelMonitor.hpp  StatisticsController.h  StatisticsProcessor.cpp  StatisticsProcessor.h  UniversalOrderBook.hpp  coinbasestreamclient.cpp  coinbasestreamclient.h  cvdthresholdrule.cpp  cvdthresholdrule.h  lockfreequeue.h  performancemonitor.cpp  performancemonitor.h  (+6 more)
libs/core/marketdata/: MarketDataCore.cpp  MarketDataCore.hpp
libs/core/marketdata/auth/: Authenticator.cpp  Authenticator.hpp
libs/core/marketdata/cache/: DataCache.cpp  DataCache.hpp
libs/core/marketdata/dispatch/: Channels.hpp  MessageDispatcher.hpp  MessageParser.hpp
libs/core/marketdata/model/: TradeData.h
libs/core/marketdata/sinks/: DataCacheSinkAdapter.hpp  IMarketDataSink.hpp
libs/core/marketdata/ws/: BeastWsTransport.cpp  BeastWsTransport.hpp  SubscriptionManager.hpp  WsTransport.hpp
libs/gui/: CMakeCache.txt  CMakeLists.txt  ChartModeController.cpp  CoordinateSystem.cpp  CoordinateSystem.h  GPUTypes.h  GridIntegrationAdapter.cpp  GridIntegrationAdapter.h  LiquidityTimeSeriesEngine.cpp  LiquidityTimeSeriesEngine.h  MainWindowGpu.cpp  MainWindowGpu.h  OLD_GRID_RENDERER.txt  OLD_GRID_RENDERER_H.txt  PerformanceMonitor.cpp  PerformanceMonitor.h  UnifiedGridRenderer.cpp  UnifiedGridRenderer.h  candlelod.cpp  candlelod.h  candlestickbatched.cpp  candlestickbatched.h  chartcoordinator.cpp  chartcoordinator.h  chartmode.h  chartmodecontroller.cpp  chartmodecontroller.h  dynamiclod.cpp  dynamiclod.h  fractaldatagenerator.cpp  fractaldatagenerator.h  fractalzoomcontroller.cpp  fractalzoomcontroller.h  gpuchartwidget.cpp  gpuchartwidget.h  gpudataadapter.cpp  gpudataadapter.h  heatmapinstanced.cpp  heatmapinstanced.h  instanttestdata.cpp  (+18 more)
libs/gui/models/: AxisModel.cpp  AxisModel.hpp  PriceAxisModel.cpp  PriceAxisModel.hpp  TimeAxisModel.cpp  TimeAxisModel.hpp
libs/gui/qml/: CandleChartView.qml  DepthChartView.qml  ZeroLagDepthChart.qml
libs/gui/qml/controls/: GridResolutionSelector.qml  NavigationControls.qml  PriceResolutionSelector.qml  RenderModeSelector.qml  TimeframeSelector.qml  VolumeFilter.qml
libs/gui/render/: DataProcessor.cpp  DataProcessor.hpp  GridSceneNode.cpp  GridSceneNode.hpp  GridTypes.hpp  GridViewState.cpp  GridViewState.hpp  IRenderStrategy.cpp  IRenderStrategy.hpp  RenderConfig.hpp  RenderDiagnostics.cpp  RenderDiagnostics.hpp  RenderTypes.hpp
libs/gui/render/strategies/: CandleStrategy.cpp  CandleStrategy.hpp  HeatmapStrategy.cpp  HeatmapStrategy.hpp  TradeBubbleStrategy.cpp  TradeBubbleStrategy.hpp  TradeFlowStrategy.cpp  TradeFlowStrategy.hpp
libs/gui/themes/: DarkTheme.cpp  DarkTheme.hpp  ITheme.hpp  ThemeManager.cpp  ThemeManager.hpp
libs/gui/widgets/: AICommentaryFeedDock.cpp  AICommentaryFeedDock.hpp  CommentaryFeedDock.cpp  CommentaryFeedDock.hpp  CopenetFeedDock.cpp  CopenetFeedDock.hpp  DockablePanel.cpp  DockablePanel.hpp  HeatmapDock.cpp  HeatmapDock.hpp  LayoutManager.cpp  LayoutManager.hpp  MarketDataModel.cpp  MarketDataModel.hpp  MarketDataPanel.cpp  MarketDataPanel.hpp  OrderBookDock.cpp  OrderBookDock.hpp  SecApiClient.cpp  SecApiClient.hpp  SecFilingDock.cpp  SecFilingDock.hpp  SecServiceBridge.cpp  SecServiceBridge.hpp  ServiceLocator.cpp  ServiceLocator.hpp  StatusBar.cpp  StatusBar.hpp  StatusDock.cpp  StatusDock.hpp  SymbolControlDock.cpp  SymbolControlDock.hpp
tests/: CMakeLists.txt  README.md  test_coinbase_firehose.cpp  test_coordinate_system.cpp  test_data_integrity.cpp  test_datacache.cpp  test_fast_orderbook.cpp  test_market_data_orderbook_integration.cpp  test_messageparser.cpp  test_multi_mode_architecture.cpp  test_order_book_state.cpp  test_performance_baseline.cpp  test_professional_requirements.cpp  test_rendering_performance.cpp  test_stress_performance.cpp  test_universal_market_data_integration.cpp  test_universal_orderbook.cpp
tests/marketdata/: CMakeLists.txt  test_datacache_sink_adapter.cpp  test_message_dispatcher.cpp  test_subscription_manager.cpp
tests/marketdata/fixtures/: coinbase_messages.hpp  mock_authenticator.hpp  spy_sink.hpp
tests/old_tests/: test_coinbaseclient.cpp  test_comprehensive.cpp  test_facade.cpp
tests/render/: StrategyTests.cpp
(+125 files in other folders)
